# cstandard

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  readme.md
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  preg.c  preg.h  util.c  util.h
lib/lession/: CMakeLists.txt
lib/lession/01hello/: CMakeLists.txt  hello.c  hello.h
lib/lession/02assert/: CMakeLists.txt  l_assert.h
lib/lession/04math/: CMakeLists.txt  l_math.c  l_math.h
lib/lession/05stdio/: f_fclose.c
lib/lession/06stdlib/: CMakeLists.txt  l_stdlib.c  l_stdlib.h
lib/lession/07string/: CMakeLists.txt  l_string.c  l_string.h
lib/lession/08time/: CMakeLists.txt  l_time.c  l_time.h
lib/lession/09function/: CMakeLists.txt  l_function.c  l_function.h
src/: CMakeLists.txt  config.c  config.h  main.c
src/conf/: c.conf.bak  c.example.conf
src/lession/01/: hello.c
src/lession/02assert/: l_assert.c
src/lession/03ctype/: l_ctype.c
